--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,55 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="1430"
+    android:viewportHeight="1430">
+  <group android:scaleX="0.55"
+      android:scaleY="0.55"
+      android:translateX="321.75"
+      android:translateY="321.75">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M313,221.6c-5.8,2.4 -9.1,8.2 -24.9,43.9 -5.7,12.6 -13.1,29.3 -16.6,37 -3.4,7.7 -8,17.8 -10,22.5 -2.1,4.7 -4.1,8.9 -4.5,9.5 -1.1,1.4 -15.9,34.2 -17.6,38.9 -1.2,3.4 -1.4,63.7 -1.4,415.9l0,411.9 2,3.3c1.1,1.8 3.3,4.1 4.8,5.1 2.6,1.8 6.2,1.9 73.2,1.9 78.8,-0 72.8,0.5 78.7,-7.2l2.8,-3.6 0.3,-411 0.2,-411 -3.6,-7.6c-4.7,-9.9 -16.4,-35.9 -16.4,-36.5 0,-0.9 -24,-53.7 -27.9,-61.6 -2.1,-4.1 -6.6,-14 -10,-22 -11.7,-27.5 -13,-29.1 -22.3,-29.6 -2.9,-0.2 -6,-0.1 -6.8,0.2zM325.5,290.5c3,7.1 5.5,13.2 5.5,13.7 0,0.9 -24.3,1.1 -25.2,0.2 -0.3,-0.3 2.4,-6.8 6,-14.5 3.6,-7.6 7,-13.5 7.4,-13.1 0.5,0.5 3.3,6.6 6.3,13.7zM356.9,359.5c10.1,22.2 10.5,23.3 10.9,31.2l0.4,8.3 -9.7,13.5c-5.3,7.4 -10.1,13.7 -10.5,14 -0.5,0.3 -4.5,-6.5 -8.9,-15.2 -5,-9.8 -9.1,-16.5 -10.7,-17.7 -3.8,-2.7 -11.2,-3.2 -15.8,-1.1 -4.7,2.2 -6.1,4.3 -14.6,21.5 -4,7.9 -7.5,13.9 -8,13.4 -0.4,-0.5 -5.1,-6.7 -10.4,-13.9l-9.6,-12.9 0,-9 0,-9 8.2,-18c4.5,-10 9.2,-20.5 10.5,-23.4l2.3,-5.2 27.7,0.2 27.8,0.3 10.4,23zM335.6,470.8c7.8,6.4 16.1,4.5 23.6,-5.3 2.4,-3.2 5.3,-6.9 6.5,-8.4l2.2,-2.6 0.1,276.2 0,276.3 -49,-0 -49,-0 0,-276.8 0,-276.7 2.5,3c1.3,1.6 4.1,5.3 6.2,8.1 6.5,8.9 12.6,11.7 19.8,8.9 5.9,-2.2 8.2,-5.2 15,-19.2l5.8,-11.8 6.3,12.7c4.4,8.8 7.4,13.5 10,15.6zM368,1055l0,16 -49,-0 -49,-0 0,-16 0,-16 49,-0 49,-0 0,16zM367.8,1141.2l0.2,38.8 -49,-0 -49,-0 0,-39 0,-39 48.8,0.2 48.7,0.3 0.3,38.7z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M525.5,221.7c-3.5,0.5 -8.9,4.4 -10.7,7.6 -0.8,1.3 -1.5,7.4 -1.8,14.7l-0.5,12.4 -6.4,3.6c-9.4,5.3 -17.6,13.2 -21.4,20.4 -2.9,5.5 -3.2,6.9 -3.2,15.1 0,9.8 1.7,15 7.2,22 3.4,4.4 13,11.8 19.5,15.1l4.8,2.4 0,19c0,18.5 -0.1,18.9 -2.2,20.5 -1.3,0.8 -5.8,3.8 -10,6.6 -13.8,9 -19.2,18 -19.3,31.9 0,7.6 0.3,9.2 3.3,15.2 3.8,7.8 11.1,14.8 21.2,20.7l6.5,3.7 0.3,19.1 0.2,19.2 -7.2,4.2c-19.3,11.3 -27.9,27 -23.8,43.8 2.5,10.6 12.9,22 26.2,28.7l4.8,2.4 0,19 0,18.9 -9.9,6.6c-16.2,10.6 -21.5,18.9 -21.6,33.5 0,7.6 0.3,9.2 3.3,15.2 3.8,7.7 10.1,13.9 20.7,20.3l7,4.2 0.3,19 0.2,19 -8.2,5c-9.6,5.9 -17.9,14.2 -21,21 -1.7,3.8 -2.2,6.7 -2.3,13.8 0,7.9 0.4,9.7 2.8,14.6 3.6,7.4 11.4,15.1 21,20.7l7.7,4.5 -0.2,19.1 -0.3,19.1 -7.5,4.5c-9.6,5.7 -17.4,13.4 -20.8,20.7 -2.3,4.9 -2.7,7.2 -2.7,14.3 0,7.6 0.4,9.3 3.3,15.2 3.8,7.7 10.1,13.9 20.7,20.3l7,4.2 0.3,19 0.2,19 -8.2,5c-9.6,5.9 -17.9,14.2 -21,21 -1.7,3.8 -2.2,6.7 -2.3,13.8 0,7.9 0.3,9.7 2.8,14.7 3.4,6.9 13.1,16.2 22.2,21.3l6.5,3.7 -0.2,19.1 -0.3,19 -7,4.3c-10.9,6.7 -16.9,12.5 -20.7,20.1 -3,6.1 -3.3,7.7 -3.3,15.3 0,7.6 0.3,9.2 3.3,15.3 3.8,7.6 9.8,13.4 20.7,20.1 7,4.2 7,4.3 7,8.7 0,4.3 0,4.4 -7,8.6 -21.5,12.9 -27,25.9 -15.6,36.7 2.4,2.3 4.2,3 8.4,3.4 6.4,0.5 10.4,-1.2 14.1,-6.1 1.4,-1.8 6,-5.3 10.3,-7.8l7.8,-4.4 345,-0.5c277,-0.4 345.4,-0.8 347.2,-1.8 1.3,-0.7 3.4,-2.9 4.8,-5l2.5,-3.7 0,-474.6 0,-474.6 -2.3,-3.3c-1.2,-1.9 -3.8,-4.3 -5.7,-5.4l-3.5,-2.1 -345,-0.1c-189.7,-0.1 -346.3,0.1 -348,0.3zM1199,707l0,454 -313.1,-0c-297.8,-0 -313.1,-0.1 -312.3,-1.8 0.4,-0.9 0.9,-5.1 1.1,-9.2 0.3,-6.3 0.1,-8 -1.6,-10.8 -6.8,-10.7 -23.2,-9.1 -28,2.8 -0.7,1.8 -1,-4.2 -1,-20.5l-0.1,-23 7.1,-4c15.2,-8.5 23.9,-20.7 23.9,-33.5 0,-4.7 -0.6,-7.4 -2,-9.8 -6.6,-10.7 -23.1,-9.1 -27.9,2.8 -0.7,1.7 -1,-9.1 -1,-35.1l-0.1,-37.6 6.8,-3.9c9.8,-5.7 19.4,-15.5 22,-22.7 3,-7.9 3,-16.9 0,-21.3 -6.7,-9.7 -20.8,-9.1 -26.5,1.1l-2.3,4 0,-37.5 0,-37.5 7.1,-4c15.2,-8.5 23.9,-20.7 23.9,-33.5 0,-4.7 -0.6,-7.4 -2,-9.8 -6.6,-10.7 -23.1,-9.1 -27.9,2.8 -0.7,1.7 -1,-9.1 -1,-35.2l-0.1,-37.6 6.8,-3.8c3.7,-2.1 9.7,-6.7 13.3,-10.3 7.9,-7.9 10.9,-14.6 10.9,-24.6 0,-6 -0.2,-6.8 -3.6,-10.5 -7.7,-8.5 -20.1,-7.1 -25.4,2.8l-1.9,3.7 -0.1,-37.6 0,-37.5 3.8,-1.8c5.5,-2.6 15.6,-10.1 18.7,-13.8 1.6,-1.8 4.1,-6 5.7,-9.3 3.6,-7.6 3.9,-17.2 0.8,-22.3 -6.6,-10.7 -23.1,-9.1 -27.9,2.8 -0.7,1.7 -1,-9.1 -1,-35.2l-0.1,-37.6 6.8,-3.8c9.6,-5.3 19.3,-15.4 22,-22.7 3,-7.9 2.9,-16.3 0,-20.7 -3.4,-5 -6.9,-7.1 -11.9,-7.3 -6.4,-0.2 -10.7,1.9 -14,7.2l-2.9,4.5 0,-37.5 0,-37.4 5.3,-2.7c16.5,-8.7 25.7,-21.2 25.7,-35.1 0,-5 -0.5,-7 -2.4,-9.8 -7,-10.3 -22.8,-8.5 -27.5,3.1 -0.7,1.7 -1,-9.1 -1,-35.2l-0.1,-37.7 6.2,-3.3c6.7,-3.6 16.8,-12.3 19.5,-16.9l1.7,-2.9 313.8,-0 313.8,-0 0,454z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M636.5,323.9c-1.7,0.4 -4.2,1.5 -5.7,2.5 -3.2,2.1 -6.8,9.1 -6.8,13.2 0,4.8 4,10.6 9,13.1l4.4,2.3 244.1,-0c238.4,-0 244.1,-0.1 248.2,-2 6.9,-3.1 10.7,-11.4 8.4,-18.3 -1.5,-4.5 -6.7,-9.3 -11.6,-10.6 -4.6,-1.2 -484.9,-1.4 -490,-0.2z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M635.3,416.1c-4.1,1.2 -8.8,6 -10.3,10.5 -2.4,7 1.3,15.3 8.3,18.4 4.1,1.9 9.8,2 248.1,2l244,-0 4.2,-2.1c4.8,-2.3 8.2,-6.9 9.1,-12.3 0.8,-4.9 -2.8,-11.9 -7.5,-14.8l-3.7,-2.3 -244.5,-0.2c-147.7,-0.1 -245.8,0.2 -247.7,0.8z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M635.4,508.1c-4.6,1.3 -9,5.9 -10.5,10.7 -2.4,8.1 2.7,16.9 11.1,19.2 2.5,0.7 83.9,0.9 247.6,0.8l243.9,-0.3 3.7,-2.3c3.9,-2.4 7.8,-9.1 7.8,-13.2 0,-4.1 -3.9,-10.8 -7.8,-13.2l-3.7,-2.3 -244.5,-0.2c-145.5,-0.1 -245.8,0.2 -247.6,0.8z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M635.4,600.1c-4.6,1.3 -9,5.9 -10.5,10.7 -2.4,8.1 2.7,16.9 11.1,19.2 2.5,0.7 83.9,0.9 247.6,0.8l243.9,-0.3 3.7,-2.3c3.9,-2.4 7.8,-9.1 7.8,-13.2 0,-4.1 -3.9,-10.8 -7.8,-13.2l-3.7,-2.3 -244.5,-0.2c-145.5,-0.1 -245.8,0.2 -247.6,0.8z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M633,693.2c-5,2.6 -9,8.4 -9,13.2 0,4.7 3.7,11.3 7.8,13.8l3.7,2.3 246.1,-0 246,-0 3.7,-2.5c4,-2.7 7.7,-9 7.7,-13.1 0,-4.7 -4.2,-11.2 -8.9,-13.6l-4.4,-2.3 -244.1,-0 -244.2,-0 -4.4,2.2z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M633,785.2c-5,2.6 -9,8.4 -9,13.2 0,4 3.4,10.7 6.8,13.1 2.7,2 4.3,2 250.9,2l248.2,-0 3.5,-3.4c2,-1.9 4.1,-5 4.7,-6.8 2.3,-6.9 -1.5,-15.2 -8.4,-18.3 -4.1,-1.9 -9.8,-2 -248.2,-2l-244.1,-0 -4.4,2.2z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M632.8,877c-10,5.3 -11.5,17 -3.2,25.1l3.5,3.4 247.3,0.3 247.3,0.2 3.3,-2.2c7.6,-5.2 9.7,-12.3 5.8,-19.8 -1.7,-3.3 -3.5,-5.1 -6.8,-6.8l-4.4,-2.2 -244.6,-0c-239.9,0.1 -244.6,0.1 -248.2,2z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M632.8,969c-10,5.3 -11.5,17 -3.2,25.1l3.5,3.4 247.3,0.3 247.3,0.2 3.3,-2.2c7.6,-5.2 9.7,-12.3 5.8,-19.8 -1.7,-3.3 -3.5,-5.1 -6.8,-6.8l-4.4,-2.2 -244.6,-0c-239.9,0.1 -244.6,0.1 -248.2,2z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M633.2,1060.7c-5.5,2.7 -8.7,7.8 -8.7,13.9 0,5.9 2,9.4 7.5,13.1l3.3,2.3 245.9,-0c270,-0 248.7,0.5 254.1,-6 5.4,-6.4 4,-16.4 -3.1,-21.8l-3.5,-2.7 -246.1,-0.2c-226.3,-0.2 -246.4,-0.1 -249.4,1.4z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
+  </group>
 </vector>
