--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#201E28"
+    android:background="#1A1A1A"
     android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
@@ -13,9 +13,9 @@
         android:layout_width="240dp"
         android:layout_height="48dp"
         android:layout_marginTop="40dp"
-        android:backgroundTint="#E64173"
+        android:backgroundTint="#FFFFFF"
         android:text="Завтра"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,9 +26,9 @@
         android:layout_width="240dp"
         android:layout_height="48dp"
         android:layout_marginTop="100dp"
-        android:backgroundTint="#E64173"
+        android:backgroundTint="#FFFFFF"
         android:text="Сегодня"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,9 +39,9 @@
         android:layout_width="240dp"
         android:layout_height="48dp"
         android:layout_marginTop="40dp"
-        android:backgroundTint="#E64273"
+        android:backgroundTint="#FFFFFF"
         android:text="Следующие 7 дней"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,9 +52,9 @@
         android:layout_width="240dp"
         android:layout_height="48dp"
         android:layout_marginTop="40dp"
-        android:backgroundTint="#E64273"
+        android:backgroundTint="#FFFFFF"
         android:text="Выполненные"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,9 +65,9 @@
         android:layout_width="240dp"
         android:layout_height="48dp"
         android:layout_marginTop="40dp"
-        android:backgroundTint="#E64273"
+        android:backgroundTint="#FFFFFF"
         android:text="Все задачи"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
