--- a/app/src/main/res/layout/activity_task_create.xml
+++ b/app/src/main/res/layout/activity_task_create.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#201E28"
+    android:background="#1A1A1A"
     tools:context=".TaskCreateActivity">
 
     <Button
@@ -14,9 +14,9 @@
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:backgroundTint="#E64173"
+        android:backgroundTint="#FFFFFF"
         android:text="Назад"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -156,9 +156,9 @@
         android:layout_width="240dp"
         android:layout_height="48dp"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="#E64173"
+        android:backgroundTint="#FFFFFF"
         android:text="Добавить задачу"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
