--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -6,15 +6,14 @@
     android:layout_height="match_parent"
     android:background="#1A1A1A">
 
-    <Button
-        android:id="@+id/buttonBack"
-        android:layout_width="110dp"
-        android:layout_height="48dp"
+    <TextView
+        android:id="@+id/textSort"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:backgroundTint="#FFFFFF"
-        android:text="Назад"
-        android:textColor="#000000"
+        android:layout_marginTop="37dp"
+        android:text="Дата и время"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,13 +22,15 @@
         android:id="@+id/textTasks"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="37dp"
+        android:layout_marginEnd="16dp"
         android:text="Следующие 7 дней"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonBack"
+        app:layout_constraintStart_toEndOf="@+id/textSort"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
